<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="0dp"
            android:paddingRight="16dp"
            android:paddingTop="0dp">

            <ImageView
                android:id="@+id/person_photo"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginRight="16dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/textUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignBottom="@+id/card_puesto_hora"
                android:layout_alignEnd="@+id/textView204"
                android:layout_alignTop="@+id/card_puesto_hora"
                android:layout_toEndOf="@+id/person_photo"
                android:background="?android:attr/colorButtonNormal"
                android:elevation="7dp"
                android:gravity="center_vertical|center"
                android:text="hh"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/card_puesto_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/card_puesto_deperfectos"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/card_puesto_deperfectos"
                android:background="@drawable/boton_redondo_amarillo"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/card_puesto_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/card_puesto_fecha"
                android:layout_marginLeft="5dp"
                android:background="@drawable/boton_redondo_amarillo"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/card_puesto_inspector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textUserName"
                android:layout_below="@+id/textUserName"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/textView182"
                android:background="@android:color/darker_gray"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:text="TextView"
                android:textColor="?android:attr/colorBackground" />

            <TextView
                android:id="@+id/text_desper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView182"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/person_photo"
                android:gravity="center_vertical"
                android:text="@string/DESPERFECTOS" />

            <TextView
                android:id="@+id/textViewcard_puesto_riesgos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_desper"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/person_photo"
                android:gravity="center_vertical"
                android:text="@string/RIESGOS" />

            <TextView
                android:id="@+id/tcard_puesto_observacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewcard_puesto_riesgos"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/person_photo"
                android:gravity="center_vertical"
                android:text="@string/OBSERVACIONES" />

            <TextView
                android:id="@+id/textView182"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/card_puesto_inspector"
                android:layout_toEndOf="@+id/person_photo"
                android:gravity="center_vertical"
                android:text="@string/INSPECTOR" />

            <TextView
                android:id="@+id/card_puesto_deperfectos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/card_puesto_inspector"
                android:layout_alignTop="@+id/text_desper"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/text_desper"
                android:background="@android:color/darker_gray"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:text="TextView"
                android:textColor="?android:attr/colorBackground" />

            <TextView
                android:id="@+id/card_puesto_riesgos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewcard_puesto_riesgos"
                android:layout_alignBottom="@+id/textViewcard_puesto_riesgos"
                android:layout_alignEnd="@+id/card_puesto_deperfectos"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/textViewcard_puesto_riesgos"
                android:background="@android:color/darker_gray"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:text="TextView"
                android:textColor="?android:attr/colorBackground" />

            <TextView
                android:id="@+id/card_puesto_observacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tcard_puesto_observacion"
                android:layout_alignBottom="@+id/tcard_puesto_observacion"
                android:layout_alignEnd="@+id/card_puesto_riesgos"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/tcard_puesto_observacion"
                android:background="@android:color/darker_gray"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:text="TextView"
                android:textColor="?android:attr/colorBackground" />

            <TextView
                android:id="@+id/textView186"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView188"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/person_photo"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/ADM" />

            <TextView
                android:id="@+id/textView188"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView186"
                android:layout_marginLeft="10dp"
                android:background="@android:color/holo_blue_light"
                android:elevation="3dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView189"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView186"
                android:layout_alignBottom="@+id/textView186"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/textView186"
                android:gravity="center"
                android:text="@string/MAQUINA" />

            <TextView
                android:id="@+id/textView195"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView189"
                android:layout_below="@+id/textView189"
                android:background="@android:color/holo_blue_light"
                android:elevation="3dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView196"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView189"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/textView189"
                android:gravity="center"
                android:text="@string/BARRERAS" />

            <TextView
                android:id="@+id/textView197"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView196"
                android:layout_alignStart="@+id/textView196"
                android:layout_below="@+id/textView196"
                android:background="@android:color/holo_blue_light"
                android:elevation="3dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView198"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView196"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/textView196"
                android:gravity="center"
                android:text="@string/TRAZAS" />

            <TextView
                android:id="@+id/textView199"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView198"
                android:layout_alignStart="@+id/textView198"
                android:layout_below="@+id/textView198"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView200"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView198"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/textView198"
                android:gravity="center"
                android:text="@string/TORNOS" />

            <TextView
                android:id="@+id/textView201"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView200"
                android:layout_alignStart="@+id/textView200"
                android:layout_below="@+id/textView198"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView202"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView201"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/textView200"
                android:gravity="center"
                android:text="@string/DETECTOR" />

            <TextView
                android:id="@+id/textView203"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView202"
                android:layout_alignStart="@+id/textView202"
                android:layout_below="@+id/textView202"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView204"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView202"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/textView202"
                android:gravity="center"
                android:text="@string/ZAPATOS" />

            <TextView
                android:id="@+id/textView205"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView203"
                android:layout_alignBottom="@+id/textView203"
                android:layout_alignEnd="@+id/textView204"
                android:layout_alignStart="@+id/textView204"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/card_puesto_MES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView204"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/textView204"
                android:background="@drawable/boton_redondo_amarillo"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/black" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>